# ssb-keys-mnemonic-neon

./: README.md  package.json
.github/workflows/: main.yml
lib/: index.js
native/: Cargo.toml
native/src/: k2w.rs  lib.rs  utils.rs  w2k.rs
prebuilds/darwin-x64/: electron.abi75.node  electron.abi76.node  electron.abi80.node  electron.abi82.node  node.abi64.node  node.abi72.node  node.abi83.node
prebuilds/linux-x64/: electron.abi75.node  electron.abi76.node  electron.abi80.node  electron.abi82.node  node.abi64.node  node.abi72.node  node.abi83.node
prebuilds/win32-x64/: electron.abi75.node  electron.abi76.node  electron.abi80.node  electron.abi82.node  node.abi64.node  node.abi72.node  node.abi83.node
test-extra/: index.js
