[package]
name = "ssb-keys-mnemonic-neon"
version = "1.0.0"
authors = ["Andre Staltz <andre@staltz.com>"]
license = "AGPL-3.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "ssb_neon_mnemonic_keys"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.0"

[dependencies]
neon = "0.5.0"
bip39 = "0.6.0-beta.1"
ssb-crypto = "0.2.1"
