[package]
name = "ssb-keys-mnemonic-neon"
version = "1.0.0"
authors = ["Andre Staltz <andre@staltz.com>"]
license = "LGPL-3.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "ssb_neon_mnemonic_keys"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.1"

[dependencies]
neon = "0.5.1"
bip39 = "1.0.1"
ssb-crypto = "0.2.3"
